# near-contract-template

./: .gitignore  Cargo.toml  Makefile  README.md  cargo-generate.toml
contracts/mock_ft/: Cargo.toml
contracts/{{contract-name}}/: Cargo.toml
contracts/{{contract-name}}/src/: errors.rs  lib.rs
