[workspace]
resolver = "2"
members = [
  "contracts/*"
]

[workspace.package]
edition = "2021"
publish = false
repository = "https://github.com/{{author}}/{{repo-name}}"

[workspace.dependencies]
near-sdk = { version = "5.17", features = ["unstable", "unit-testing", "global-contracts"] }
near-contract-standards = "5.17"
near-plugins = { git = "https://github.com/aurora-is-near/near-plugins", tag = "v0.5.0" }
thiserror = "2"

once_cell = "1.21"
hex = "0.4.3"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
